# bot_api_imei

./: Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
app/: __init__.py  config.py  logging.py  telegram_bot.py
app/models/: users.py
app/routes/: imei_routes.py
app/services/: imei_service.py
